--- a/index.html
+++ b/index.html
@@ -13,11 +13,23 @@ Released under the MIT license: http://jsbin.mit-license.org
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>what is this</title>
+
+  <style>
+    .header { 
+    background-color:bisque;
+    padding:80px;
+    text-align:center;
+    }
+    </style>
 </head>
-  <h1> Rana's page </h1>
+
   
   
 <body>
+  <div class="header">
+     <h1> Rana's page </h1>
+  </div>
+
   <p> My name is Rana and I am born in Cairo. 
     I grew up in Montreal. 
     I have a fat cat named Oreo and 
