--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@ Released under the MIT license: http://jsbin.mit-license.org
   <div class="header">
      <h1> Rana's page </h1>
   </div>
+<div class="navbar"> 
+<a href="www.wikipedia.org">Fun Reads</a>
 
+
+</div>
   <p> My name is Rana and I am born in Cairo. 
     I grew up in Montreal. 
     I have a fat cat named Oreo and 
