--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Released under the MIT license: http://jsbin.mit-license.org
      <h1> Rana's page </h1>
   </div>
 <div class="navbar"> 
-<a href="www.wikipedia.org">Fun Reads</a>
+<a href="https://www.wikipedia.org">Fun Reads</a>
 
 
 </div>
