--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@ Released under the MIT license: http://jsbin.mit-license.org
     padding:80px;
     text-align:center;
     }
+    .navbar a{
+    color: black; 
+    text-decoration: none;
+    font-weight: 800;
+    font-size:xx-large;
+    }
     </style>
 </head>
 
