--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@ Released under the MIT license: http://jsbin.mit-license.org
     font-weight: 800;
     font-size:xx-large;
     }
+
+    .navbar a:hover{
+    background-color:darkgreen; 
+    color: black; 
+    } 
     </style>
 </head>
 
